# FR-android-dlib-opencv

./: .gitignore  .travis.yml  README.md
FaceTracker/app/: CMakeLists.txt  build.gradle
FaceTracker/app/jni/: CMakeLists.txt  imageutils_jni.cc
FaceTracker/app/jni/object_tracking/: object_tracker_jni.cc
FaceTracker/app/jni/openalpr_jni/: CMakeLists.txt
FaceTracker/app/src/main/: AndroidManifest.xml
FaceTracker/app/src/main/assets/: labels_face.txt
FaceTracker/app/src/main/assets/runtime_data/: openalpr.defaults.conf
FaceTracker/app/src/main/cpp/: DetectionBasedTracker_jni.cpp  DetectionBasedTracker_jni.h  OCV-native-lib.cpp  native-lib.cpp
FaceTracker/app/src/main/cpp/tracking/: cvconfig.h  multiTracker.cpp  opencl_kernels_tracking.cpp  opencl_kernels_tracking.hpp
FaceTracker/app/src/main/java/com/android/lpr/: AutoFitTextureView.java  CameraActivityALPRMain.java  CameraActivityMainALPReu.java  CameraActivityMainALPRus.java  CameraConnectionFragment.java  LegacyCameraConnectionFragment.java  OpenALPRDetector.java  OverlayView.java  Recognition.java
FaceTracker/app/src/main/java/com/openalpr/jni/: Alpr.java  AlprResults.java
FaceTracker/app/src/main/java/dlib/android/: FaceRecognizer.java
FaceTracker/app/src/main/java/opencv/android/fdt/: DetectionBasedTracker.java  (+1 more)
FaceTracker/app/src/main/res/layout/: activity_alpr.xml  activity_camera_alpr_eu.xml  activity_camera_alpr_us.xml  activity_camera_ssdfaces.xml  camera_connection_fragment_tracking.xml  main.xml
FaceTracker/app/src/main/res/layout-land/: face_detect_surface_view.xml  main.xml
FaceTracker/app/src/main/res/values/: strings.xml
(+26 files in other folders)
